added dummy data

--- a/.env
+++ b/.env
@@ -5,4 +5,4 @@ POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
 POSTGRES_DB=task_db
 ELASTICSEARCH_HOST=http://elasticsearch:9200
-KAFKA_BROKER=127.0.0.1:9092
+KAFKA_BROKER=localhost:29092
