--- a/filebeat.yml
+++ b/filebeat.yml
@@ -2,7 +2,7 @@ filebeat.inputs:
   - type: log
     enabled: true
     paths:
-      - /app/logs/*.log
+      - /logs/*.log
 
 output.elasticsearch:
   hosts: [ "http://elasticsearch:9200" ]
